# ESP-64

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-c3-devkitm-1
docs/: intro.md
docs/architecture/: _category_.json  boot-sequence.md  overview.md  partitions-and-storage.md
docs/build-and-flash/: _category_.json  building.md  flashing-and-provisioning.md
docs/cartridge/: _category_.json  default-save.md  gb-cartridge-rom.md  mbc-mappers.md  save-system.md
docs/joybus/: _category_.json  accessory-transfer-pak.md  controller.md  hardware.md  transport.md
docs/reference/: _category_.json  configuration.md
docs/remote-control/: _category_.json  input-protocol.md  r36s-client.md  wifi-provisioning.md
docs/web-portal/: _category_.json  portal-and-api.md
main/: CMakeLists.txt  board_config.h  cst816d.cpp  cst816d.h  display.cpp  emulator_runtime.cpp  emulator_runtime.h  gb_cartridge.cpp  gb_cartridge.h  gb_time.h  idf_component.yml  joybus_rmt.cpp  main.cpp  mbc1_mapper.cpp  mbc1_mapper.h  n64_accessory.cpp  n64_controller.cpp  n64_joybus.cpp  n64_joybus.h  n64_runtime.cpp  n64_runtime.h  power_monitor.cpp  power_monitor.h  save_store.cpp  save_store.h  status_display.cpp  status_display.h  touch_input.cpp  touch_input.h  transfer_pak.cpp  web_assets.S  web_portal.cpp  web_portal.h
main/cartridge/: gb_cartridge.cpp  gb_cartridge.h  mbc1_mapper.cpp  pokemon_stadium_compat.cpp  pokemon_stadium_compat.h  save_store.cpp  save_store.h
main/core/: apu.cpp  apu.h  gbsave.h  lcd.cpp  mem.cpp  sdl.cpp  sdl.h
main/joybus/: joybus_rmt.cpp  joybus_rmt.h  n64_accessory.cpp  n64_accessory.h  n64_controller.h  n64_joybus.cpp  n64_joybus.h  transfer_pak.cpp  transfer_pak.h
main/web/: web_portal.cpp  web_portal.h
scripts/: copy_default_save.mjs  platformio_active_rom.py  platformio_default_save.py
webui/: index.html  package-lock.json  package.json  vite.config.js
webui/pwa/: manifest.webmanifest  sw.js
webui/src/: main.js  styles.css
